feat: show selected lunar date in poster calendar